# manimator-cli

./: LICENSE  README.md  main.py  pyproject.toml  test.dvi
manimator/: __init__.py  cli.py  config_manager.py  conversation.py  corrector.py  prompt_builder.py  renderer.py
manimator/commands/: __init__.py  config.py  create.py  list_models.py
manimator/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
manimator/utils/: __init__.py  logger.py  preview.py
tests/: __init__.py  test_config_manager.py  test_conversation.py  test_prompt_builder.py  test_providers.py  test_renderer.py
